--- a/CDs/cd1/styles/bodyBackground.css
+++ b/CDs/cd1/styles/bodyBackground.css
@@ -7,7 +7,8 @@
 html {
   width: 100%;
   min-height: 100%;
-  overflow-x: hidden;
+  overflow-x: clip;
+  overflow-y: auto;
   background-color: black;
 }
 
@@ -34,7 +35,8 @@ body {
   padding: 0;
   background-size: cover;
   background-color: black;
-  overflow-x: hidden;
+  overflow-x: clip;
+  overflow-y: visible;
 }
 
 body > * {
@@ -57,7 +59,7 @@ body > * {
 
 @media (max-width: 678px) {
   html{
-    height: 100%;
+    min-height: 100%;
   }
   body::before {
     width: 100%; height: 100lvh;
