--- a/CDs/globalStyles/songTag.css
+++ b/CDs/globalStyles/songTag.css
@@ -47,7 +47,7 @@
   font-style: normal;
 }
 .songInfo div{
-  min-height: 64px;
+  min-height: 30px;
   align-content: center;
 }
 
